<resources>
    <string name="app_name">HackerMail</string>
    <string name="action_settings">Settings</string>
    <string name="txtMyEmail">My Email :</string>
    <string name="txtTo">To :</string>
    <string name="txtTime">Time :</string>
    <string name="txtContent">Content :</string>
    <string name="txtChangeUser">Change user</string>
    <string name="hint_word"></string>
    <string name="buttonSave">Save</string>
    <string name="buttonCancel">Cancel</string>
    <string name="txtTemplate">Template</string>
    <string name="txtHint">Please click on the top right-top menu to log in.</string>
    <string name="txt_welcome_please_enter_your_email_address">Welcome! Please enter your Email address.</string>
    <string name="txtEmail">Email :</string>
    <string name="buttonOk">OK</string>
    <string name="txt_user_logged_in">User logged in:</string>
    <string name="btn_log_out">Log out</string>
    <string name="nothing">nothing</string>

    <string name="button_save">Save</string>
    <string name="empty_not_saved">Clock not saved because it is empty.</string>
    <string name="clear_all_data">Clear all data</string>
    <string name="delete_word_preamble">Deleting </string>
    <string name="clear_data_toast_text">Clear the data now!</string>
    <string name="no_word">No Clock</string>
    <string name="rights">Copyright © 2019 HACKERMAIL All rights reserved.</string>
    <string name="MailServiceNotification">Mail_Service_Notification</string>
    <string name="notification_channel_description">notification from mail service</string>
    <string name="mail_service">Mail has Send!!!</string>
    <string name="Template_txt">Reason: </string>
</resources>
