<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/shape"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/txtV2"
            style="@style/blueTextMiddle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/txtTo" />


        <TextView
            android:id="@+id/textViewEmail"
            style="@style/blueTextSmall"
            android:layout_width="354dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/txtV3"
            style="@style/blueTextMiddle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtTime" />

        <TextView
            android:id="@+id/textViewTime"
            style="@style/blueTextSmall"
            android:layout_width="354dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:inputType="time" />


        <TextView
            android:id="@+id/txtV4"
            style="@style/blueTextMiddle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtContent" />

        <TextView
            android:id="@+id/textViewContent"
            style="@style/blueTextSmall"
            android:layout_marginBottom="5dp"
            android:layout_width="354dp"
            android:layout_height="35dp" />

    </LinearLayout>


</LinearLayout>

