<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f4f4"
    tools:context=".logIn">


    <TextView
        android:id="@+id/txtV10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="684dp"
        android:text="Copyright © 2019 HACKERMAIL All rights reserved."
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtV8"
        android:layout_width="330dp"
        android:layout_height="76dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="8dp"
        android:text="@string/txt_welcome_please_enter_your_email_address"
        android:textColor="#1785C6"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtV9"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txtEmail"
        android:textColor="#1785C6"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/txtV8"
        app:layout_constraintTop_toBottomOf="@+id/txtV8" />

    <EditText
        android:id="@+id/editTextEmailLogIn"
        android:layout_width="321dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/txtV9"
        app:layout_constraintTop_toBottomOf="@+id/txtV9" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailLogIn"
        tools:layout_editor_absoluteX="8dp">

        <Button
            android:id="@+id/btnOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginLeft="68dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/buttonOk"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:onClick="login"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/buttonCancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toEndOf="@+id/btnOK"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="cancel"/>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>